@@ -1,3 +1,8 @@
+Fri May  5 16:55:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Add option to MatchOptions to set a maximum number of terms to
+	  OR together in large probabalistic queries.
+
 Thu May  4 16:58:08 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* ProgClient::get_mset() now returns actual results rather than
